# mlflow-watsonml

./: .env.template  .gitignore  404.html  LICENSE  README.md  conda.yaml  index.html  mkdocs.yml  objects.inv  playground.py  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages.yml  python-package.yml  python-publish.yml
api_reference/: index.html
credentials/: index.html
docs/: api_reference.md  credentials.md  index.md  install.md
install/: index.html
mlflow_watsonml/: __init__.py  config.py  deploy.py  logging.py  store.py  utils.py  wml.py
notebooks/: mlflow_wml_deployment_demo.ipynb
tests/: test_config.py  test_deploy.py  test_mlflow_watsonml.py  test_mlflow_watsonml_plugin.py  test_utils.py
tests/resources/mock/: mock_client.py
user_guide/: index.html
